--- a/web/First-App-Web/src/app/card-modal-edit/card-modal-edit.component.html
+++ b/web/First-App-Web/src/app/card-modal-edit/card-modal-edit.component.html
@@ -1,1 +1,61 @@
-<p>card-modal-edit works!</p>
+<div class="dialog-body mb-4 mt-2" >
+  <form #ngForm  name="createForm" (ngSubmit)="OnFormSubmit()">
+    <div class="form-group cname">
+      <input id="title" placeholder="Enter card name*" name="title" [(ngModel)]="dialogConfig.data.Card.Title" #title="ngModel" required maxlength="100" />
+      <div
+        *ngIf="title.invalid && (title.dirty || title.touched)" class=" alert-danger" style="color: red; font-size:14px">
+        <div *ngIf="title.errors?.['required']">Card Name is required.</div>
+        <div *ngIf="title.errors?.['maxlength']">Name max size is 100 characters.</div>
+      </div>
+    </div>
+    <br>
+    <div class="wrapper">
+      <div class="center">
+        <div>
+          <i class="pi pi-list"></i> <span> List*</span>
+        </div>
+      </div>
+      <div>
+        <p-dropdown name="cardlist" appendTo="body" [options]="(MovementsList | async)!" [(ngModel)]="dialogConfig.data.Card.TaskListId" #list="ngModel" optionLabel="name" dataKey="id" optionValue="id" required placeholder="Select a List"></p-dropdown>
+        <div
+          *ngIf="list.invalid && (list.dirty || list.touched)" class=" alert-danger" style="color: red; font-size:14px">
+          <div *ngIf="title.errors?.['required']">List is required.</div>
+        </div>
+      </div>
+      <div class="center">
+        <div>
+          <i class="pi pi-calendar"></i> <span> Due date*</span>
+        </div>
+      </div>
+      <div >
+        <p-calendar dateFormat="dd MM yy" appendTo="body" [(ngModel)]="dialogConfig.data.Card.DueDate" #date="ngModel" [minDate]="dialogConfig.data.Card.DueDate" required name="DueDate" [showIcon]="false"></p-calendar>
+        <div
+          *ngIf="date.invalid && (date.dirty || date.touched)" class=" alert-danger" style="color: red; font-size:14px">
+          <div *ngIf="date.errors?.['required']">Due date is required.</div>
+        </div>
+      </div>
+      <div class="center">
+        <div>
+          <i class="pi pi-tag"></i> <span> Priority*</span>
+        </div>
+      </div>
+      <div>
+        <p-dropdown name="cardpriority" [options]="['Low','Medium','High']" appendTo="body" #priority="ngModel" [(ngModel)]="dialogConfig.data.Card.Priority" required placeholder="Select a priority"></p-dropdown>
+        <div
+          *ngIf="priority.invalid && (priority.dirty || priority.touched)" class=" alert-danger" style="color: red; font-size:14px">
+          <div *ngIf="priority.errors?.['required']">Priority is required.</div>
+        </div>
+      </div>
+    </div>
+    <h2>Description</h2>
+    <div class="form-group">
+      <textarea  rows="5" cols="30" style="width:100%" pInputTextarea [(ngModel)]="dialogConfig.data.Card.Description" name="description" id="description" placeholder="Write some information ..." maxlength="1000" [autoResize]="true"></textarea>
+    </div>
+    <div class="form-group control-btn-block" >
+
+      <button *ngIf="ngForm.checkValidity()" type="submit" class="btn btn-primary" style="width:49%">Save</button>
+      <button *ngIf="!ngForm.checkValidity()" type="submit" class="btn btn-primary disabled" style="width:49%">Save</button>
+      <button type="button" class="btn btn-secondary" style="width:49%" (click)="closeDialog()">Cancel</button>
+    </div>
+  </form>
+</div>
