--- a/web/First-App-Web/src/app/card/card.component.html
+++ b/web/First-App-Web/src/app/card/card.component.html
@@ -1,1 +1,39 @@
-<p>card works!</p>
+<div class="card"  (click)="ShowCardModal()" style="width: 100%;">
+  <div class="card-body">
+    <div style="display: flex; justify-content: space-between">
+      <div>
+        <h5 class="card-title">{{this.Card?.title}}</h5>
+      </div>
+      <div>
+<span ngbDropdown class="d-inline-block dropdown-settings" (click)="$event.stopPropagation()">
+              <span style="cursor: pointer" class="dropdown-toggle-settings" data-toggle="" ngbDropdownToggle>
+                <svg xmlns="http://www.w3.org/2000/svg"  width="16" height="16" fill="currentColor"  class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                 <path d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0m0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0"/>
+                </svg>
+              </span>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <button ngbDropdownItem (click)="openEditCardDialog()">Edit</button>
+              <button ngbDropdownItem (click)="onDelete()">Delete</button>
+            </div>
+          </span>
+      </div>
+
+    </div>
+      <h6 class="card-subtitle mb-2 text-body-secondary" style="width: 80%">{{this.Card?.description}}</h6>
+      <p class="card-subtitle mb-2 text-body-secondary" style="width: 80%">{{Card?.dueDate}}</p>
+      <p class="card-subtitle mb-2 text-body-secondary" style="width: 80%">{{Card?.priority}}</p>
+      <div ngbDropdown class="d-inline-block" style="width: 100%" (click)="$event.stopPropagation()">
+          <button type="button" class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>
+            Move to
+          </button>
+          <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+            <span *ngFor="let list of MovementsList | async">
+              <button (click)="ChangeList(list.id)"  ngbDropdownItem>{{list.name}}</button>
+            </span>
+
+
+          </div>
+       </div>
+
+  </div>
+</div>
