Finished frontend development

--- a/First-App-Web/src/app/card-modal/card-modal.component.html
+++ b/First-App-Web/src/app/card-modal/card-modal.component.html
@@ -6,7 +6,7 @@
           <h2>{{card.title}}</h2>
         </div>
         <div>
-          <p-button icon="pi pi-pen-to-square" label="Edit" severity="secondary"></p-button>
+          <p-button (click)="onEdit()" icon="pi pi-pen-to-square" label="Edit" severity="secondary"></p-button>
         </div>
       </div>
       <br>
