added responsive desing

--- a/First-App-Web/src/app/app.component.html
+++ b/First-App-Web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<p-sidebar [(visible)]="this.sidebarVisible" position="right"  [style]="{width : '30em'}">
+<p-sidebar [(visible)]="this.sidebarVisible" position="right"  styleClass="md:w-30rem lg:w-30rem">
   <ng-template pTemplate="header" styleClass="sideheader">History</ng-template>
   <ng-template pTemplate="content"><app-history-general></app-history-general></ng-template>
 </p-sidebar>
