--- a/First-App-Web/src/styles.css
+++ b/First-App-Web/src/styles.css
@@ -2,11 +2,23 @@
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 @import "primeicons/primeicons.css";
+@import "primeflex/primeflex.css";
 body {
   margin: 10px 40px 0px 20px;
+
 }
 
 .borderless-dialog .mat-dialog-container {
   padding: 0px;
   overflow: hidden;
+}
+
+@media screen and (max-width: 580px) {
+  .dialog{
+    width: 95vw;
+  }
+}
+@media screen and (min-width: 580px) {
+  .dialog{
+  }
 }
