--- a/First-App-Web/src/styles.css
+++ b/First-App-Web/src/styles.css
@@ -4,7 +4,7 @@
 @import "primeicons/primeicons.css";
 @import "primeflex/primeflex.css";
 body {
-  margin: 10px 40px 0px 20px;
+  /*margin: 10px 40px 0px 20px;*/
 
 }
 
